syntax = "proto3";

option java_multiple_files = true;
option java_package = "tech.solvio.grpc";
option java_outer_classname = "SolvioProto";

package solvio;

service Collections {
  rpc Get (GetCollectionInfoRequest) returns (GetCollectionInfoResponse) {}
  rpc List (ListCollectionsRequest) returns (ListCollectionsResponse) {}
  rpc Create (CreateCollection) returns (CollectionOperationResponse) {}
  rpc Update (UpdateCollection) returns (CollectionOperationResponse) {}
  rpc Delete (DeleteCollection) returns (CollectionOperationResponse) {}
}

message GetCollectionInfoRequest {
  string name = 1;
}

message ListCollectionsRequest {
}

message CollectionDescription {
  string name = 1;
}

message GetCollectionInfoResponse {
  CollectionInfo result = 1;
  double time = 2;
}

message ListCollectionsResponse {
  repeated CollectionDescription collections = 1;
  double time = 2;
}

enum Distance {
  Cosine = 0;
  Euclid = 1;
  Dot = 2;
}

enum CollectionStatus {
  Green = 0;
  Yellow = 1;
  Red = 2;
}

enum PayloadSchemaType {
  Keyword = 0;
  Integer = 1;
  Float = 2;
  Geo = 3;
}

message HnswConfigDiff {
  optional uint64 m = 1;
  optional uint64 ef_construct = 2;
  optional uint64 full_scan_threshold = 3;
}

message WalConfigDiff {
  optional uint64 wal_capacity_mb = 1;
  optional uint64 wal_segments_ahead = 2;
}

message OptimizersConfigDiff {
  optional double deleted_threshold = 1;
  optional uint64 vacuum_min_vector_number = 2;
  optional uint64 default_segment_number = 3;
  optional uint64 max_segment_size = 4;
  optional uint64 memmap_threshold = 5;
  optional uint64 indexing_threshold = 6;
  optional uint64 payload_indexing_threshold = 7;
  optional uint64 flush_interval_sec = 8;
  optional uint64 max_optimization_threads = 9;
}

message CreateCollection {
  string name = 1;
  uint64 vector_size = 2;
  Distance distance = 3;
  optional HnswConfigDiff hnsw_config = 4;
  optional WalConfigDiff wal_config = 5;
  optional OptimizersConfigDiff optimizers_config = 6;
}

message UpdateCollection {
  string name = 1;
  optional OptimizersConfigDiff optimizers_config = 2;
}

message DeleteCollection {
  string name = 1;
}

message CollectionOperationResponse {
  bool result = 1;
  double time = 2;
}

message CollectionParams {
  uint64 vector_size = 1;
  Distance distance = 2;
}

message CollectionConfig {
  CollectionParams params = 1;
  HnswConfigDiff hnsw_config = 2;
  OptimizersConfigDiff optimizer_config = 3;
  WalConfigDiff wal_config = 4;
}

message PayloadSchemaInfo {
  PayloadSchemaType data_type = 1;
  bool indexed = 2;
}

message CollectionInfo {
  CollectionStatus status = 1;
  uint64 vectors_count = 2;
  uint64 segments_count = 3;
  uint64 disk_data_size = 4;
  uint64 ram_data_size = 5;
  CollectionConfig config = 6;
  map<string, PayloadSchemaInfo> payload_schema = 7;
}
